# ctms

./: .env.services  .gitignore  BACKUP_RESTORE_GUIDE.txt  DOCKER_COMMANDS_GUIDE.md  QUICK_COMMANDS.md  SERVICES_COMPLETE_GUIDE.md  SERVICES_SETUP.md  backup.sh  backup.sql  db_backup.sql  docker-backup.bat  docker-compose.services.yml  docker-compose.yml  docker-restore.bat  end_work.bat  file_tree.txt  import_home.ps1  readme.md  restore.sh  start_work.bat  sync-both.bat  xcopy
New folder/backend/: celerybeat-schedule  file_tree.txt  permissions_bundle.txt  powershel.ps1  pyproject.toml  seed.py
New folder/backend/app/: main.py
New folder/backend/app/core/: permissions.py
New folder/backend/app/db/: enums.py
New folder/backend/app/models/: DepartmentManager.py  Notification.py  RecurringTaskLog.py  Task.py  TaskAttachment.py  TaskShare.py  TaskStep.py  TaskStepDependency_Model.py  TaskTransfer.py  TaskWorkflowModel.py  TaskWorkflowStepModel.py  User.py  UserContact.py  UserLogs.py  WorkflowTemplateStepModel.py  __init__.py
New folder/backend/app/repositories/: TaskAssignments_repo.py  TaskWorkflowStep_repo.py  WorkflowTemplateStep_rep.py  WorkflowTemplate_repo.py  delegation_repo.py  department_manager_repository.py  favorite_repo.py  job_level_repository.py  taskWorkFlow_repo.py  task_step_repo.py  user_contact_repository.py  user_repository.py
New folder/backend/app/schemas/: TaskWorkflowStep_schema.py  attachments.py  base.py  comments.py  job_levels.py  notification_settings.py  search.py  shares.py  task_assignments.py  task_comment_sch.py  task_logs.py  (+5 more)
(+232 files in other folders)
